# a2a

./: .gitignore  CHANGELOG.md  Cargo.toml  GUIDE.en_us.md  GUIDE.zh_cn.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.ps1
src/: embedded.rs  lib.rs  main.rs  paths.rs
src/auth/: mod.rs  store.rs
src/commands/: ask.rs  auth.rs  clean.rs  doctor.rs  init.rs  list.rs  mod.rs  models.rs  reset.rs  status.rs  welcome.rs
src/fallback/: mod.rs
src/isolation/: mod.rs
src/prompt/: mod.rs
src/runner/: cursor_agent.rs  doctor.rs  history.rs  meta.rs  mod.rs
src/util/: file_lock.rs  mod.rs
templates/: prompt-template.md
templates/rules/: 40-a2a-protocol.mdc
templates/skill/a2a/: SKILL.md
templates/skill/a2a-operator/: SKILL.md
templates/skill/a2a-setup-guide/: SKILL.md
